--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,48 +40,68 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textViewTitulo" />
 
-            <TextView
-                android:id="@+id/textViewPermissao"
+            <Switch
+                android:id="@+id/switchServico"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Para que o App funcione, é necessário a permissão de acesso aos seus contatos"
-                android:textSize="14dp"
-                android:textColor="#000000"
+                android:text="Serviço Ativo"
                 android:layout_margin="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textViewInfo" />
 
-            <Button
-                android:id="@+id/buttonPermissaoContato"
-                android:text="Permitir acesso aos contatos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewPermissao"/>
-
-            <TextView
-                android:id="@+id/textViewConfig"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayoutBotoes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="É necessário que o App esteja definido como App de Filtro de Chamadas e SPAM. Acesse as configurações pressionando o botão abaixo:"
-                android:textSize="14dp"
-                android:textColor="#000000"
-                android:layout_margin="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/buttonPermissaoContato" />
+                app:layout_constraintTop_toBottomOf="@id/switchServico">
 
-            <Button
-                android:id="@+id/buttonConfig"
-                android:text="Abrir configurações de Filtro de Chamadas e SPAM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewConfig"/>
+                <TextView
+                    android:id="@+id/textViewPermissao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Para que o App funcione, é necessário a permissão de acesso aos seus contatos"
+                    android:textSize="14dp"
+                    android:textColor="#000000"
+                    android:layout_margin="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/buttonPermissaoContato"
+                    android:text="Permitir acesso aos contatos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewPermissao"/>
+
+                <TextView
+                    android:id="@+id/textViewConfig"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="É necessário que o App esteja definido como App de Filtro de Chamadas e SPAM. Acesse as configurações pressionando o botão abaixo:"
+                    android:textSize="14dp"
+                    android:textColor="#000000"
+                    android:layout_margin="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/buttonPermissaoContato" />
+
+                <Button
+                    android:id="@+id/buttonConfig"
+                    android:text="Abrir configurações de Filtro de Chamadas e SPAM"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewConfig"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
